--- a/20181015/package.json
+++ b/20181015/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.9",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
@@ -16,6 +17,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://xitengfei.github.io",
   "browserslist": [
     ">0.2%",
     "not dead",
