--- a/20181015/package.json
+++ b/20181015/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.9",
+    "babel-plugin-import": "^1.11.0",
     "react": "^16.5.2",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
