--- a/20181015/package.json
+++ b/20181015/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.9",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
